# typed-ffmpeg

./: .coveragerc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CIRCULAR_IMPORT_BLOCKER.md  CI_FINAL_STATUS.md  CI_FIX_SUMMARY.md  CI_STATUS.md  CI_SUCCESS.md  CI_SUMMARY.txt  CODEGEN_WITH_QSV.md  COMPLETE.md  CONTRIBUTING.md  DOCKERFILE_COMPARISON.md  FILTER_RESTORATION_ANALYSIS.md  FINAL_STATUS.md  FINAL_SUCCESS.md  HARDWARE_ACCELERATION.md  LARGE_FILTERGRAPH_ISSUE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MONOREPO_DESIGN.md  MONOREPO_FINAL_STATUS.md  MONOREPO_PR.md  MONOREPO_STATUS.md  PREK_UPGRADE.md  PR_DESCRIPTION.md  PR_MONOREPO.md  PR_READY.md  README-WORKSPACE.md  README.ipynb  README.md  README.monorepo.md  TEST_RESULTS.md  TODOS.md  blog.md  build_version.py  (+20 more)
.agents/skills/: README.md
.claude/: settings.json
.claude/skills/: README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: WORKFLOWS.md  copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/skills/: README.md
.github/workflows/: build-ffmpeg-images.yml  capture-error.yml  ci-codegen-versions.yml  ci-codegen.yml  ci-gate.yml  ci-monorepo-lint.yml  ci-monorepo-test.yml  ci-package-lint.yml  ci-package-test.yml  ci-package.yml  ci-playground-test.yml  ci-scripts-docs.yml  ci-scripts-lint.yml  ci-scripts-test.yml  ci-scripts.yml  ci-ts-test.yml  clone-simple.yml  codegen-pr.yml  codegen-regenerate.yml  codegen.yml  collect-version-data.yml  daily-ci.yml  debug-all-versions.yml  debug-test.yml  dependabot-auto-merge.yml  deploy-docs.yml  extract.yml  integration.yml  lint.yml  main.yml  minimal-matrix.yml  monorepo-publish.yml  python-package.yml  python-publish-compatible.yml  python-publish-versioned.yml  python-publish.yml  react-tests.yml  regen-bindings.yml  regen.yml  regenerate-bindings.yml  (+6 more)
.husky/: pre-commit
.kiro/steering/: product.md  structure.md  tech.md
.uv/: pyproject.toml
crates/codegen/: Cargo.toml
crates/codegen/src/: cache.rs  cli.rs  lib.rs  main.rs  manual.rs
crates/codegen/src/codegen/: gen.rs  mod.rs  utils.rs  version_diff.rs
crates/codegen/src/parse_c/: mod.rs  parse_c_structure.rs  parse_ffmpeg_opt.rs  pre_compile.rs
crates/codegen/src/parse_docs/: download.rs  html_to_md.rs  mod.rs  parser.rs
crates/codegen/src/parse_help/: codecs.rs  filters.rs  formats.rs  help.rs  mod.rs  utils.rs
crates/codegen/src/schema/: codegen.rs  docs.rs  filter.rs  manual.rs  mod.rs  parse_c.rs  parse_help.rs
crates/codegen/templates/: _components.tera  filters.py.tera  sources.py.tera
crates/codegen/templates/codecs/: decoders.py.tera  encoders.py.tera
crates/codegen/templates/dag/global_runnable/: global_args.py.tera
crates/codegen/templates/dag/io/: _input.py.tera  _output.py.tera  output_args.py.tera
crates/codegen/templates/formats/: demuxers.py.tera  muxers.py.tera
crates/codegen/templates/options/: codec.py.tera  format.py.tera
crates/codegen/templates/streams/: audio.py.tera  video.py.tera
designs/class-identity-solution/: index.html
designs/monorepo-multi-version/: index.html
designs/multi-version-bindings/: index.html
development/codegen/: index.html
development/prek-migration/: index.html
docker/ffmpeg-builder/: Dockerfile  Dockerfile.5.1  Dockerfile.6.1  Dockerfile.7.1  Dockerfile.8.0  README.md  verify-hardware-accel.sh
docs/: SUMMARY.md  audio_stream.md  base.md  cli_parsing_decoupling.md  code.md  exceptions.md  faq.md  filters.md  index.md  nodes.md  probe.md  schema.md  types.md  typescript.md  v4-packages.md  version-differences.md
docs/dag/: base.md  compile.md  context.md  nodes.md  schema.md  serialize.md  utils.md  validate.md
docs/design/: ir-layer.md
docs/designs/: class-identity-solution.md  monorepo-multi-version.md  multi-version-bindings.md
docs/development/: codegen.md  prek-migration.md
docs/media/: input-stream
docs/migration/: v3-to-v4.md
docs/nodes/: base.md  nodes.md
docs/src/: base.md  exceptions.md  filters.md
docs/streams/: av_stream.md  video_stream.md
docs/usage/: Digraph.gv  basic-api-usage.ipynb  complex-filtering.ipynb  customizing-filters.ipynb  doc.md  eexp.md  execute.ipynb  exp.md  how_to_use-1.ipynb  how_to_use.md  probe.ipynb  serialize.md  typed.md  validate.md
docs/utils/: escaping.md  typing.md
examples/typescript-demo/: README.md  package.json  tsconfig.json
faq/: index.html
ffmpeg-flow-editor/: biome.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ffmpeg-flow-editor/public/: index.html
ffmpeg-flow-editor/pyodide-dist/: future-1.0.0-py3-none-any.whl
ffmpeg-flow-editor/src/: App.tsx
ffmpeg-node-editor/: package.json  tsconfig.json
ffmpeg-node-editor/public/: index.html
ffmpeg-node-editor/src/: App.tsx  Editor.tsx  index.css
migration/v3-to-v4/: index.html
public/: index.html
records/1. use-gpts/: ffmpeg-filters.html  main.py
reference/SUMMARY/: index.html
reference/scripts/: index.html
scripts/: .gitignore  _stream.py  add-lazy-import.py  bump-version.py  compile-readme.py  compile-readme.sh  create-stubs.py  fix-dag-imports.py  fix-monorepo-imports.py  gen_ref_pages.py  main.py  merge_filters.py  merge_to_method.py  parse_ffmpeg_doc.py  parser.py  pyproject.toml  regenerate-monorepo.sh  release.py  requirements.txt  settings.py  setup-workspace.sh  test-all.sh  test.py  test_large_filtergraph_demo.py  write_sdk.py  xsd_to_dataclasses.py
scripts/app/: settings.py
scripts/code_gen/: cli.py  gen.py  remove_typing_from_docstrings.py  schema.py
scripts/filters/: 8.1 acompressor.py  8.10 adecorrelate.py  8.101 replaygain.py  8.102 resample.py  8.103 rubberband.py  8.104 sidechaincompress.py  8.105 sidechaingate.py  8.106 silencedetect.py  8.108 sofalizer.py  8.119 volume.py  (+58 more)
search/: search_index.json
src/: App.tsx  ffmpeg-filters.html  stream.py  test.py  write_sdk.py
typed-ffmpeg-playground/: 404.html  index.html
typescript/: index.html
v4-packages/: index.html
version-differences/: index.html
(+4961 files in other folders)
