[package]
name = "typed-ffmpeg-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generation tool for typed-ffmpeg Python bindings"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
walkdir = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
